--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,7 +1,25 @@
 .navbar__nav {
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .navbar__nav-item {
-  padding-right: 1em;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  border: .5em solid rgb(123, 249, 108);
+  border-radius: 1em;
+}
+
+/* Not sure if this is valid BEM, but need the
+increased specificity to override built-in styles */
+.navbar__nav .navbar__nav-item {
+  color: black;
+  text-decoration: none;
+}
+
+.navbar__icon {
+  width: 5em;
+  height: 5em;
 }
