--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,15 @@
-.App {
+.video-store {
   text-align: center;
+  background-color: rgb(89, 89, 89);
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.header__controls {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.header__item {
+  border: .5em solid rgb(123, 249, 108);
+  border-radius: 1em;
+  flex: 0 1 auto;
 }
