--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -2,14 +2,15 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  height: 100%;
 }
 
 .navbar__nav-item {
+  background-color: rgb(233, 233, 233);
   display: inline-flex;
   flex-direction: column;
   align-items: center;
-  border: .5em solid rgb(123, 249, 108);
-  border-radius: 1em;
+  font-size: 12px;
 }
 
 /* Not sure if this is valid BEM, but need the
@@ -20,6 +21,6 @@ increased specificity to override built-in styles */
 }
 
 .navbar__icon {
-  width: 5em;
-  height: 5em;
+  width: 4rem;
+  height: 4rem;
 }
